--- a/Ujian/templates/tes.html
+++ b/Ujian/templates/tes.html
@@ -200,8 +200,8 @@
           <!-- row -->
           <div class="row align-items-center">
               <div class="col-sm offset-md-1 mb-4 mb-md-0">
-                  <h6 class="title text-light">Want to work with me?</h6>
-                  <p class="m-0 text-light">Always feel Free to Contact & Hire me</p>
+                  <h6 class="title text-light">Want to connect with me?</h6>
+                  <p class="m-0 text-light">Always Free to Get Connected with me</p>
               </div>
               <div class="col-sm offset-sm-2 offset-md-3">
                   <a href="https://instagram.com/farhanmaliks?jgsh=MWM0ZXh6OHdhbTQxeQ==" class="btn btn-lg my-font btn-light rounded">Hire Me</a>
@@ -213,8 +213,8 @@
   <!-- testimonial section -->
   <section class="section" id="testmonial">
       <div class="container text-center">
-          <p class="section-subtitle">What is Client Think About Me ?</p>
-          <h6 class="section-title mb-6">Testmonial</h6>
+          <p class="section-subtitle">What They Think About Me ?</p>
+          <h6 class="section-title mb-6">Guest</h6>
 
           <!-- row -->
           <div class="row">
@@ -241,8 +241,8 @@
 <!-- contact section -->
    <section class="section" id="testimony">
     <div class="container text-center">
-        <p class="section-subtitle">Send me a testimony</p>
-        <h6 class="section-title mb-5">Rate Me</h6>
+        <p class="section-subtitle">Send me a Regards</p>
+        <h6 class="section-title mb-5">Message Me</h6>
         <!-- contact form -->
         <form class="contact-form col-md-10 col-lg-8 m-auto" method="POST">
             {% csrf_token %}
@@ -272,16 +272,12 @@
     <footer class="footer">
         <p class="mb-0">Copyright
             <script>document.write(new Date().getFullYear())</script> &copy; <a
-                href="http://www.devcrud.com">DevCRUD</a> Distribution <a
-                href="https://themewagon.com">ThemeWagon</a>
+                href="http://www.devcrud.com">Farhan Malik S</a> All Right Reserved <a
+                href="https://www.linkedin.com/in/farhan-malik-syamsudin-8974342b0/">My Linkedin</a>
         </p>
         <div class="social-links text-right m-auto ml-sm-auto">
-            <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
-            <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
             <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
-            <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
-            <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
-            <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+            <a href="https://instagram.com/farhanmaliks?jgsh=MWM0ZXh6OHdhbTQxeQ==" class="link"><i class="ti-instagram"></i></a>
         </div>
     </footer>
 </div> <!-- end of page footer -->
